Change validation to component

--- a/src/app/list/modal/modal.component.html
+++ b/src/app/list/modal/modal.component.html
@@ -8,31 +8,26 @@
     <div class="content">
       <div class="field">
         <div class="input">
-          <div class="alert" *ngIf="modalForm.controls['resources'].invalid && modalForm.controls['resources'].dirty">
-            !
-          </div>
+          <app-invalid-alert class="alert"
+                             [invalid]="modalForm.controls['resources'].invalid && modalForm.controls['resources'].dirty"></app-invalid-alert>
           <input type="number"
                  placeholder="Средства"
                  formControlName="resources"
                  id="resources"
                  name="resources">
         </div>
-        <div class="popover" *ngIf="modalForm.controls['resources'].invalid && modalForm.controls['resources'].dirty">
-          Неверное значение
-        </div>
+        <app-invalid-popover
+          [invalid]="modalForm.controls['resources'].invalid && modalForm.controls['resources'].dirty"></app-invalid-popover>
       </div>
       <div class="field">
         <div class="input">
-          <div class="alert alert-textarea"
-               *ngIf="modalForm.controls['comment'].invalid && modalForm.controls['comment'].dirty">
-            !
-          </div>
+          <app-invalid-alert class="alert alert-textarea"
+                             [invalid]="modalForm.controls['comment'].invalid && modalForm.controls['comment'].dirty"></app-invalid-alert>
           <textarea maxlength="512" rows="5" placeholder="Комментарий" formControlName="comment"
                     name="comment"></textarea>
         </div>
-        <div class="popover" *ngIf="modalForm.controls['comment'].invalid && modalForm.controls['comment'].dirty">
-          Неверное значение
-        </div>
+        <app-invalid-popover
+          [invalid]="modalForm.controls['comment'].invalid && modalForm.controls['comment'].dirty"></app-invalid-popover>
       </div>
     </div>
     <div class="actions">
