--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -1,16 +1,4 @@
-$back: #f1f1f1
-$border: #c0c1c2
-$red: #ff2d00
-$sum: #fbfbfb
-$top: linear-gradient(to bottom, $sum, #f9f9f9)
-$tableHeadLine: #4f4f4f
-$tableBorderBetween: #eef2f5
-$stripRow: #f0f0f0
-$buttonDefault: linear-gradient(to bottom, #fff, #edf2f6)
-$buttonActive: linear-gradient(to top, $red, #ca2601)
-$buttonActiveBorder: $red
-$buttonActiveGlow: #e42800
-
+@import 'colors.sass'
 @font-face
   font-family: 'Futura Futurus'
   src: url('../../assets/ParaType-FuturaFuturisRegular.otf')
@@ -23,7 +11,6 @@ $buttonActiveGlow: #e42800
   .table
     th
       max-width: 2rem
-
 
 @media screen and (max-width: 768px)
   .container
@@ -142,7 +129,6 @@ content, header
   flex-direction: column
   justify-content: center
   align-items: center
-
 
 .arrow
   color: $red
