Remove sorting from comments

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -26,10 +26,9 @@
               <app-sort-arrows [sorting]="sorting['resources']" class="control"></app-sort-arrows>
             </div>
           </th>
-          <th (click)="sort('comment')" width="50%">
-            <div class="control">
+          <th width="50%">
+            <div>
               Комментарий
-              <app-sort-arrows [sorting]="sorting['comment']" class="control"></app-sort-arrows>
             </div>
           </th>
         </tr>
